# AI-Based-Real-Estate-Valuation-System

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  SECRETS_SETUP.md  SUBMISSION_STATUS.md  pyproject.toml  pyproject_fixed.toml  requirements.txt  requirements_production.txt
.devcontainer/: devcontainer.json
Milestone 2/: .env  .env.example  .env.template  API_KEY_REMOVED.md  API_KEY_SETUP.md  BUG_FIXES_SUMMARY.md  COMPLETE_BUG_FIX_REPORT.md  DEPLOYMENT_GUIDE.md  ERROR_FIX_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_STATUS.txt  FIXES_README.md  GEMINI_ERROR_HANDLING_REPORT.md  INVESTMENT_FIX_SUMMARY.md  KNOWLEDGE_CENTER_README.md  LIVE_VERIFICATION_REPORT.md  README.md  SECURITY_GUIDE.md  STATUS.txt  data_loader.py  database.py  emergency_fix.py  emi_calculator.py  final_verification.py  force_restart.sh  gemini_ai.py  gemini_ai.py.backup  health_check.py  investment_fix_verification.py  ml_model.py  production_config.py  property_analyzer.py  pyproject.toml  requirements.txt  start_app.sh  test_fixes.py  test_gemini_error_handling.py  test_investment_recommendations.py  verify_error_handling.py
Milestone 2/datasets/: delhi_properties.csv  gurugram_properties.csv  mumbai_properties.csv  noida_properties.csv
Milestone 2/models/: decision_tree_model.pkl  encoders.pkl  feature_columns.pkl  random_forest_model.pkl  scalers.pkl  xgboost_model.pkl
app/: .env.example  .gitignore  app.py  chatbot.py  content_system.py  data_loader.py  database.py  emi_calculator.py  financial_calculator.py  gemini_ai.py  ml_model.py  production_config.py  production_logging.py  test_all.py  (+3 more)
(+26 files in other folders)
