[project]
name = "streamlit"
version = "0.1.0"
description = "Streamlit project"
authors = [
	{ name = "Your Name", email = "your@email.com" }
]
dependencies = [
	"python >=3.8",
	"streamlit"
	# Add other dependencies here
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
