[project]
name = "streamlit"
version = "0.1.0"
description = "Streamlit project"
authors = [
	{ name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "scikit-learn",
    "xgboost",
    "joblib",
    "matplotlib",
    "seaborn",
    "google-generativeai",
    "psycopg2-binary",
    "python-dotenv"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
