# This file was moved to the root for deployment compatibility
# If you use poetry or another tool, update paths as needed
[tool.poetry]
name = "streamlit"
version = "0.1.0"
description = "Streamlit project"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "*"
# Add other dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
